added update functionality using browser prompt method

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -22,20 +22,18 @@
                 <input type="text" placeholder="Search by title" name="search-item" id="search-item" class="input-box">
             </div>
             <ul id="item-list">
+                <!-- <li class="noData">There are no items in your list. Click on the input below to add some.</li> -->
             </ul>
             <form id="create-form">
                 <input id="create-field" type="text" autocomplete="off" placeholder="Add new item" name="item"
                     class="list-input input-box">
             </form>
         </div>
-        <div class="overlay">
-        </div>
+        <div class="overlay"></div>
         <div class="update-container">
             <h3>Enter your new desired item</h3>
-            <form id="update-form">
-                <input id="update-field" type="text" autocomplete="off" placeholder="Edit item" name="item"
-                    class="list-input input-box">
-            </form>
+            <input id="update-field" type="text" autocomplete="off" placeholder="Edit item" name="item"
+                class="list-input input-box">
         </div>
 
 
