--- a/public/main.css
+++ b/public/main.css
@@ -132,7 +132,7 @@ button.edit-me {
 }
 button {
   background: #5ddaae;
-  outline: 0;
+  outline: none;
   border: 0;
   border-radius: 50%;
   transition: all 0.5s ease-in-out;
@@ -140,8 +140,7 @@ button {
   cursor: pointer;
   display: inline-block;
 }
-button:hover,
-button:focus {
+button:hover {
   background: #243665;
   color: #5ddaae;
   box-shadow: 0 0 5px 2px rgba(1, 1, 1, 0.2);
@@ -212,6 +211,9 @@ input::placeholder {
     transform: rotate(360deg);
   }
 }
+.swal-overlay--show-modal .swal-modal {
+  width: 80%;
+}
 .swal-title {
   font-size: 1rem;
 }
@@ -229,18 +231,18 @@ input::placeholder {
 button > * {
   pointer-events: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
   div#bucketList {
     max-width: 90%;
     padding: 1rem;
   }
   li.list-group-item {
     font-size: 0.8rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
   }
   input[type="text"] {
     padding: 0.5rem;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
   }
   #item-list {
     margin-top: -1rem;
@@ -250,11 +252,14 @@ button > * {
     width: 1.5rem;
     height: 1.5rem;
   }
-  button.delete-me:focus,
-  button.edit-me:focus {
-    outline: none;
+  button.delete-me:hover,
+  button.edit-me:hover {
+    background: #5ddaae;
+    color: #393939;
+    box-shadow: 0;
   }
 }
-#no-items {
-  display: none;
+.noData {
+  color: #959292;
+  font-size: 0.8rem;
 }
