--- a/public/main.css
+++ b/public/main.css
@@ -213,6 +213,7 @@ input::placeholder {
 }
 .swal-overlay--show-modal .swal-modal {
   width: 80%;
+  max-width: 500px;
 }
 .swal-title {
   font-size: 1rem;
