added list empty show message feature

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -22,7 +22,8 @@
                 <input type="text" placeholder="Search by title" name="search-item" id="search-item" class="input-box">
             </div>
             <ul id="item-list">
-                <!-- <li class="noData">There are no items in your list. Click on the input below to add some.</li> -->
+                <li class="noData">There are no items in your list. Click on the input<span class="highlight">
+                        below</span> to add some.</li>
             </ul>
             <form id="create-form">
                 <input id="create-field" type="text" autocomplete="off" placeholder="Add new item" name="item"
