--- a/public/main.css
+++ b/public/main.css
@@ -145,6 +145,10 @@ button:hover {
   color: #5ddaae;
   box-shadow: 0 0 5px 2px rgba(1, 1, 1, 0.2);
 }
+.highlight {
+  color: #5ddaae;
+  font-weight: 800;
+}
 #item-list {
   max-height: 15.7rem;
   overflow-y: scroll;
@@ -190,7 +194,7 @@ h3 {
   display: none !important;
 }
 input::placeholder {
-  color: rgb(196, 192, 192);
+  color: rgb(165, 164, 164);
   font-family: "Montserrat", sans-serif;
 }
 /* LOADER */
@@ -263,4 +267,5 @@ button > * {
 .noData {
   color: #959292;
   font-size: 0.8rem;
+  display: block;
 }
