removed bugs and completed project

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -32,11 +32,12 @@
         </div>
         <div class="overlay"></div>
         <div class="update-container">
-            <h3>Enter your new desired item</h3>
-            <input id="update-field" type="text" autocomplete="off" placeholder="Edit item" name="item"
-                class="list-input input-box">
+            <form id="update-form">
+                <h3>Enter your new desired item</h3>
+                <input id="update-field" type="text" autocomplete="off" placeholder="Edit item" name="item"
+                    class="list-input input-box">
+            </form>
         </div>
-
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
